# easycablepulling

./: .gitignore  .pre-commit-config.yaml  =1.9.0  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  PLAN.md  README.md  SCOPE.md  TODO.md  TYPE_SAFETY.md  USAGE_GUIDE.md  advanced_mypy_fix.py  conservative_mypy_fix.py  fix_mypy_errors.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  ultra_targeted_fix.py
.claude/: CLAUDE.md
.github/workflows/: ci.yml
docs/: api_reference.md  bibliography.md  cable_pulling_reference.md  data_models.md  developer_guide.md  dxf_io.md  user_guide.md
easycablepulling/: __init__.py  cli.py  config.py
easycablepulling/analysis/: __init__.py  accuracy_analyzer.py  route_optimizer.py  statistics.py
easycablepulling/calculations/: __init__.py  advanced.py  pressure.py  tension.py
easycablepulling/core/: __init__.py  cable_analysis_pipeline.py  models.py  pipeline.py
easycablepulling/geometry/: __init__.py  base_fitter.py  cleaner.py  curvature_first_fitter.py  fitter.py  fitter_factory.py  processor.py  simple_fitter.py  (+3 more)
examples/: analyze_route_deviation.py  check_all_deviations.py  check_all_deviations_simple.py  check_sect07_final.py  clean_overlay_with_zoom.py  construction_summary.py  create_plots.py  create_professional_plots.py  create_styled_plots.py  debug_arc_fitting.py  debug_complex_sections.py  debug_geometry_issues.py  debug_recursive_fitting.py  debug_sect09_deviation.py  debug_sect12_arc.py  debug_snaking_detection.py  detailed_overlay_plot.py  generate_statistics.py  identify_worst_deviations.py  investigate_length_errors.py  investigate_snaking_route.py  lateral_deviation_analysis.py  position_based_analysis.py  sect07_straight_analysis.py  simple_4_hough_test.py  simple_deviation_check.py  test_4_hough_methodology.py  test_adaptive_tolerance.py  test_current_fitting.py  test_enhanced_geometry.py  test_fallback_logic.py  test_full_section.py  test_geometry_processing.py  test_polynomial_decomposition.py  test_polynomial_fitting.py  test_simple_geometry.py  trace_recursive_fitting.py  verify_all_sections.py
midlands/: inputs.md  run.py  run_optimized.py
notebooks/: 01_basic_analysis.ipynb  02_advanced_geometry.ipynb  03_professional_visualization.ipynb
output_test/: analysis_summary.csv  analysis_summary.json
tests/: __init__.py  conftest.py
(+104 files in other folders)
